# instrumentation

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml
instrumentation/: Cargo.toml
instrumentation/src/: dashboard.rs  display.rs  gauge.rs  lib.rs
instrumentation/ui/: app.slint  road_dashboard.slint
sigma-instrumentation/: Cargo.toml
sigma-instrumentation/src/: lib.rs  updates.rs
sigma-instrumentation/src/connectivity/: action.rs  back_result.rs  controller.rs  device_row.rs  menu.rs  mod.rs  network_row.rs  screen.rs  snapshot.rs  view.rs
sigma-instrumentation/src/dashboard/: gauge_art.rs  mod.rs  needle.rs  signal_blink.rs  speed.rs
sigma-instrumentation/src/display/: config.rs  mod.rs  window.rs
sigma-instrumentation/src/gauge/: constants.rs  geometry.rs  mod.rs  needle.rs  numeral.rs  paths.rs  scale.rs  ticks.rs
sigma-instrumentation/src/telemetry/: apply.rs  message.rs  mod.rs  presenter.rs
sigma-instrumentation/src/theme/: color.rs  init.rs  mod.rs  mode.rs  preset.rs
sigma-instrumentation/src/updates/: channel_release.rs  config.rs  mod.rs  ota.rs
sigma-instrumentation/src/windows/: mod.rs
sigma-instrumentation/ui/: app.slint  road_dashboard.slint  theme.slint
sigma-instrumentation/ui/widgets/: harness_bar.slint  rpm_dial.slint  telemetry_overlay.slint
sigma-instrumentation/ui/windows/: alerts.slint  camera.slint  common.slint  compass_gps.slint  connectivity.slint  diagnostics.slint  fuel.slint  maintenance.slint  navigation.slint  security.slint  systems.slint  updates.slint
sigma-racer/: Cargo.toml  build.rs
sigma-racer/src/: main.rs  telemetry.rs
sigmaracer-instrumentation/: Cargo.toml
sigmaracer-wingman-telemetry/: Cargo.toml
sigmaracer-wingman-telemetry/src/: protocol.rs
src/: lib.rs  main.rs
testbed/: Cargo.toml  build.rs
testbed/src/: connectivity_sim.rs  main.rs  map.rs  replay.rs  sim.rs  snapshot.rs
testbed/src/sim/: mod.rs  phase.rs  physics.rs  simulation.rs
ui/: app.slint  road_dashboard.slint  theme.slint  track_dashboard.slint  track_evo_dashboard.slint
ui/widgets/: classic_tach.slint  electronics_panel.slint  horizontal_tach.slint  left_menu.slint  right_data.slint  rpm_dial.slint  speed_readout.slint  sport_tab.slint
vehicle-service/: Cargo.toml
vehicle-service/src/: can_log.rs  main.rs  sim.rs  source.rs
