[package]
name = "instrumentation"
version = "0.1.0"
description = "Sigma motorcycle instrument cluster UI (sigma-dash)"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Sigma Tactical Group contributors <https://github.com/sigmatactical-org>"]
publish = false
build = "build.rs"

[[bin]]
name = "sigma-dash"
path = "src/main.rs"

[dependencies]
slint = { version = "1.16.1", default-features = false, features = ["renderer-femtovg", "backend-winit", "compat-1-2"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
[build-dependencies]
slint-build = "1.16.1"
