[workspace]
resolver = "2"
members = [
    "sigmaracer-instrumentation",
    "sigma-racer",
    "testbed",
    "sigmaracer-wingman-telemetry",
    "vehicle-service",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Sigma Tactical Group contributors <https://github.com/sigmatactical-org>"]
publish = false

[workspace.dependencies]
slint = { version = "=1.13.1", default-features = false, features = ["renderer-femtovg", "backend-winit", "compat-1-2"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
slint-build = "=1.13.1"
sigmaracer-instrumentation = { path = "sigmaracer-instrumentation" }
sigmaracer-wingman-telemetry = { path = "sigmaracer-wingman-telemetry" }
