[workspace]
resolver = "2"
members = [
    "sigma-instrumentation",
    "testbed",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Sigma Tactical Group contributors <https://github.com/sigmatactical-org>"]
homepage = "https://sigmatactical.org"
publish = false

[workspace.dependencies]
slint = { version = "=1.17.1", default-features = false, features = ["renderer-femtovg", "backend-winit", "compat-1-2"] }
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std"] }
slint-build = "=1.17.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
ureq = "3.3.0"
sigma-instrumentation = { path = "sigma-instrumentation" }
